# cookiecutter-tce-flask-app-template

./: README.md  cookiecutter.json
{{cookiecutter.app_name}}/: .flaskenv  .gitignore  makefile  pyproject.toml  requirements.txt
{{cookiecutter.app_name}}/app/: routes.py
{{cookiecutter.app_name}}/scripts/: config.sh  deploy.sh  {{cookiecutter.apache_config_name}}  {{cookiecutter.service_name}}
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/: index.html
